--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES
     main.cpp
     Check.cpp
     CertificateIssuer.cpp
+    utils/File.cpp
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
