--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -4,8 +4,9 @@ set(SOURCES
     certificate/Revocator.cpp
     utils/Check.cpp
     utils/File.cpp
+    logger/Logger.cpp
+    logger/Stream.cpp
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} gnutls)
-
